# elecciones-salvador

./: .gitignore  README.md  pyproject.toml
src/: README.md  example.env
src/aws/: awss3.py  awssession.py
src/data/: README.md  actas_not_found.txt  chunk_0.csv  chunk_1.csv  chunk_10.csv  chunk_11.csv  chunk_12.csv  chunk_13.csv  chunk_14.csv  chunk_15.csv  chunk_16.csv  chunk_17.csv  chunk_18.csv  chunk_19.csv  chunk_2.csv  chunk_20.csv  chunk_21.csv  chunk_22.csv  chunk_23.csv  chunk_24.csv  chunk_25.csv  chunk_26.csv  chunk_27.csv  chunk_28.csv  chunk_29.csv  chunk_3.csv  chunk_30.csv  chunk_31.csv  chunk_32.csv  chunk_33.csv  chunk_34.csv  chunk_4.csv  chunk_5.csv  chunk_6.csv  chunk_7.csv  chunk_8.csv  chunk_9.csv  marzo_2024-03-04T07-32-59-428-00-00.csv  marzo_2024-03-04T07-36-49-576-00-00.csv  marzo_2024-03-04T07-54-37-179-00-00.csv  (+5 more)
src/data/2_validation/: 0_hashes.csv  ARCHIVOS_S3.csv  MISSING_FILES.csv  MISSING_FILES_S3.csv  SIMPLE_PROOF.csv  SIMPLE_PROOF_202402211032_TODOS.csv  SIMPLE_PROOF_20240306_S3.csv  SIMPLE_PROOF_UNICOS.csv  TOTAL_FILES.csv  TOTAL_FILES_HASH.csv  hashes.csv  simple_proof_20240306_S3.py  unique_files_report.py
src/scraping/: demon.py  validation.py
src/scraping/elecciones/: actas_dos.py  actas_uno.py  salvador.py  tse_gob_sv.py
src/scraping/simpleproof/: missing_files.py  validation.py
